# CI-Pipeline

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml
