[tool.poetry]
name = "learning-ci-pipeline"
version = "0.1.0"
description = ""
authors = ["Sanskar Dutta <duttasanskar@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry.packages]
packages = [{ include = "learning_ci_pipeline", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
ruff = "^0.9.6"

